--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-Flask
-scikit-learn
+click==7.1.1
+Flask==1.1.1
+gunicorn==20.0.4
+itsdangerous==1.1.0
+Jinja2==2.11.1
+MarkupSafe==1.1.1
+numpy
+joblib
